--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.aaa {
+  width: 20px;
+}
+
+.Details {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,10 +38,19 @@
   color: #61dafb;
 }
 
+table {
+  width: 100%;
+}
+
+td {
+  width: 50%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
